--- a/k8s/app-service.yml
+++ b/k8s/app-service.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todo-app-service
+  labels:
+    app: todo-app
 spec:
   type: LoadBalancer 
   ports:
